Change redirect destination from code.html to index.html

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/",
-      "dest": "/code.html"
+      "dest": "/index.html"
     },
     {
       "src": "/(.*)",
